@@ -253,7 +253,7 @@ extern char *dstPath;		/* path for the output files; */
 extern char *moduleName;	/* module name is source file without path and extension */
 				/* can be NULL while linking without compiling */
 extern int currLineno;		/* current line number    */
-extern int yylineno;		/* line number of the current file SDCC.lex */
+extern int mylineno;		/* line number of the current file SDCC.lex */
 extern FILE *yyin;		/* */
 extern FILE *asmFile;		/* assembly output file */
 extern FILE *cdbFile;		/* debugger symbol file */
